--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
 
   <div class="pimg1">
     <div class="ptext">
-      <span class="border"> Lidia Zadorova </span>
+      <span class="border"> Lorem ipsum dolor sit amet </span>
     </div>
   </div>
 </body>
